Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/grc/03-grc-kic-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: grc-kic
    istio-injection: enabled
  name: grc-kic
