Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/grc/04-grc-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: grc-team
    istio-injection: enabled
  name: grc-team
