Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/grc/audit.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audit-svc
  namespace: grc-team
spec:
  selector:
    app: audit-svc
  ports:
    - port: 6062
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-svc
  namespace: grc-team
  labels:
    app: audit-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-svc
  template:
    metadata:
      labels:
        app: audit-svc
    spec:
      serviceAccountName: audit-svc
      containers:
        - name: audit-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9092
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
