Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/grc/fraud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-svc
  namespace: grc-team
spec:
  # type: LoadBalancer
  selector:
    app: fraud-svc
  ports:
    - port: 6061
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-svc
  namespace: grc-team
  labels:
    app: fraud-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-svc
  template:
    metadata:
      labels:
        app: fraud-svc
    spec:
      serviceAccountName: fraud-svc
      containers:
        - name: fraud-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9091
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
