Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/grc/01-grc-kong-api-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: grc-kic
  name: grc-kic
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grc-kong-api-gateway
  namespace: grc-kic
spec:
  gatewayClassName: grc-kong-gatewayclass
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: grc-team
